# githunt

./: .gitignore  LICENSE  README.md  pyproject.toml
src/githunt/: CliParser.py  RepositoriesVisitor.py  Utils.py  main.py
src/githunt/Analysis/: ActivityDetectionAlgorithm.py  CountryDetectionAlgorithm.py
src/githunt/Classes/: Alias.py  CountryResult.py  GitData.py  RepositoryInformation.py  User.py
src/githunt/GitProviders/: GitHub.py
